[Issue 164] Upgrade dependencies (#167)
* upgrade dependencies

Co-Authored-By: Kevin Day <35114839+kaladay@users.noreply.github.com>
Signed-off-by: Kevin Day <kday@library.tamu.edu>

* runtime fixes, remove devtools, update dockerfile

Co-authored-by: Kevin Day <35114839+kaladay@users.noreply.github.com>