@@ -11,8 +11,8 @@ public class DefaultPageRequestProvider implements DefaultValueProvider {
 
     public Object getDefaultValue(AnnotatedElement targetElement, AnnotatedType type, Object initialValue) {
         Map<String, Object> values = new HashMap<String, Object>();
-        values.put("pageNumber", new Integer(0));
-        values.put("pageSize", new Integer(100));
+        values.put("pageNumber", Integer.valueOf(0));
+        values.put("pageSize", Integer.valueOf(100));
         values.put("sort", null);
         return values;
     }
